--- a/MarketGad-Image-Classification-Main.ipynb
+++ b/MarketGad-Image-Classification-Main.ipynb
@@ -22,6 +22,12 @@
     "<br> <br>\n",
     "- Metrics are now being added as graph plots for the judging processes.\n",
     "<br> <br>\n",
+    "- The accuracy might not be the best one but surely I will learn more and more under MarketGad and perform better and better for the company.\n",
+    "<br> <br>\n",
+    "- Due to busyness in classes and college work I didn't get much time to optimise.\n",
+    "<br> <br>\n",
+    "- Now wish for an interview call.\n",
+    "<br> <br>\n",
     "\n",
     "#### Thank you "
    ]
